# rules_msbuild

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  WORKSPACE.x  external  go.mod  go.sum
docs/: rules.md
dotnet/: extensions.bzl
dotnet/private/: context.bzl  msbuild_macros.bzl  providers.bzl  repositories.bzl
dotnet/private/actions/: assembly.bzl  launcher.bzl  publish.bzl  restore.bzl  tool_binary.bzl
dotnet/private/extensions/: dotnet.bzl  nuget.bzl
dotnet/private/msbuild/: Directory.Bazel.props
dotnet/private/rules/: BUILD  Docs.vm  msbuild.bzl
dotnet/private/toolchain/: BUILD.sdk.bazel  common.bzl  dotnet_toolchain.bzl  nuget.bzl  sdk.bzl
dotnet/tools/Bzl/: BUILD.bazel  Bzl.csproj
dotnet/tools/NuGetParser/: AssetsReader.cs  BUILD  BuildGenerator.cs  NuGetParser.csproj  Package.cs
dotnet/tools/bazel_testing/: BUILD.bazel  TestRunner.csproj
dotnet/tools/builder/: BUILD  BuildContext.cs  Builder.cs  Builder.csproj  Nuget.Config  PathMapper.cs
dotnet/tools/builder/Caching/: BuildCache.cs
dotnet/tools/builder/Diagnostics/: TargetGraphLogger.cs
dotnet/tools/builder/MSBuild/: BazelMsBuildLogger.cs
dotnet/tools/launcher/: BUILD.bazel  data_parser.go  dotnet_launcher.go  launcher_main.go
e2e/bzl_init/Binary/: Binary.csproj
e2e/hello/: MODULE.bazel  WORKSPACE  external  out.txt
e2e/hello/Binary/: BUILD.bazel  Binary.csproj
e2e/hello/RunfilesTest/: BUILD.bazel  RunfilesTest.csproj
eng/: test_release.sh
eng/docs/: BUILD.bazel  docs.csproj
eng/release/: BUILD.bazel  Program.cs  release.csproj
eng/tar/: BUILD.bazel  tar.csproj
extras/ide/: test.sh  testprops.proj
gazelle/dotnet/: BUILD  update-repos.go
gazelle/dotnet/project/: BUILD.bazel
gazelle/dotnet/testdata/bintest/binproj/: BUILD.out
gazelle/dotnet/testdata/bintest/test/: BUILD.out  test.csproj
gazelle/dotnet/testdata/clientapp/: BUILD.out  clientapp.csproj
gazelle/dotnet/testdata/contentglobs/: BUILD.out  contentglobs.csproj
gazelle/dotnet/testdata/grpc/client/: BUILD.out  client.csproj
gazelle/dotnet/testdata/grpc/proto/: BUILD.out  Proto.csproj
gazelle/dotnet/testdata/grpc/server/: BUILD.out  server.csproj
gazelle/dotnet/testdata/grpc/simple/: BUILD.out  simple.csproj
gazelle/dotnet/testdata/noprojectfile/: BUILD.in  BUILD.out
gazelle/dotnet/testdata/packagereference/: BUILD.out
gazelle/dotnet/testdata/projectreference/binary/: BUILD.out  binary.csproj
gazelle/dotnet/testdata/projectreference/lib/: BUILD.out
gazelle/dotnet/testdata/public_deps/a/: a.csproj
gazelle/dotnet/testdata/simplecontentitems/: BUILD.out  simplecontentitems.csproj
gazelle/dotnet/testdata/simpleweb/: BUILD.out
gazelle/dotnet/testdata/test/: BUILD.out  test.csproj
gazelle/dotnet/testdata/typeclassification/: BUILD.out  implicitweb.csproj
gazelle/dotnet/testdata/unsupported/: BUILD.out  unsupported.csproj
gazelle/dotnet/testdata/updatefetch/a/: a.csproj
gazelle/dotnet/util/: BUILD.bazel
tests/dotnet/tools/BzlTests/: BUILD.bazel  BzlTests.csproj  WorkspaceMakerTests.cs
tests/dotnet/tools/BzlTests/testdata/simple/cs/binary/: BUILD.bazel  binary.csproj
tests/dotnet/tools/NuGetParserTests/: AssetsReaderTests.cs  BUILD.bazel  NuGetParserTests.csproj  ParserTests.cs  project.assets.json
tests/dotnet/tools/builder/: BUILD  BuildCacheTests.cs  BuildContextTests.cs  BuilderTests.csproj  E2eTests.cs  RestoreFixerTests.cs
tests/dotnet/tools/launcher/: BUILD
tests/dotnet/tools/runfiles/integration/: BUILD  DotnetCat.cs  DotnetCat.csproj
tests/dotnet/tools/runfiles/unit/: BUILD  RunfilesTests.csproj
tests/examples/ClassLibrary/: BUILD
tests/examples/Dependent/: BUILD  Dependent.csproj
tests/examples/DirectoryProps/Consumer/: BUILD.bazel  Consumer.csproj
tests/examples/Grpc/Client/: BUILD.bazel  Client.csproj
tests/examples/Grpc/Protos/: BUILD.bazel  Protos.csproj
tests/examples/Grpc/Server/: BUILD.bazel  Server.csproj
tests/examples/Grpc/Simple/: BUILD
tests/examples/HelloBazel/: BUILD
tests/examples/HelloNuGet/: BUILD  HelloNuGet.csproj
tests/examples/HelloTest/: BUILD  HelloTest.csproj
tests/examples/HelloWeb/: BUILD.bazel  run_publish_test.go
tests/examples/NuGet/PackageDeps/: BUILD  PackageDeps.csproj
tests/examples/NuGet/Tool/: BUILD.bazel  Program.cs  Tool.csproj  run_tool_nuget_test.go
tests/examples/NuGet/Transitive/Binary/: BUILD  Binary.csproj
tests/examples/NuGet/overrides/: BUILD.bazel  overrides.csproj
tests/examples/Transitive/Binary/: BUILD  Binary.csproj
tests/examples/Transitive/Lib/: BUILD  Lib.csproj
tests/examples/Transitive/TransitiveLib/: BUILD  TransitiveLib.csproj
tests/examples/Transitive/TransitiveTransitiveLib/: BUILD
tests/sandboxing/parallel/: BUILD
tests/sanity/: BUILD
tests/tools/build_test/: BUILD  build_test.bzl  build_test.go
tests/tools/executable/: BUILD  check_executable.go
tests/tools/files/: BUILD
tests/versions/net100/: BUILD.bazel
tools/stardoc/: stardoc.bzl
