module(
    name = "rules_msbuild",
    version = "0.0.18",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "stardoc", version = "0.8.0")
bazel_dep(name = "bazel_features", version = "1.30.0")
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.7.1")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_dotnet_runtime", version = "0.0.0")

RULES_DOTNET_RUNTIME_TAG = "895f52f8ca91dc9c273598afa358e73c8945ce90"

RULES_DOTNET_RUNTIME_INTEGRITY = "sha256-Mv7dbHwvikn6cdB5u8KJwW2PsqPIrqmNakpFlilgyfc="

archive_override(
    module_name = "rules_dotnet_runtime",
    integrity = RULES_DOTNET_RUNTIME_INTEGRITY,
    strip_prefix = "rules_dotnet_runtime-" + RULES_DOTNET_RUNTIME_TAG,
    urls = ["https://github.com/pratham2002m/rules_dotnet_runtime/archive/" + RULES_DOTNET_RUNTIME_TAG + ".zip"],
)


bazel_dep(name = "rules_bazel_integration_test", version = "0.34.0", dev_dependency = True)

#################################################################
# Hermetic go toolchain
#################################################################
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    sdks = {
        "linux_amd64": ("go1.23.5.linux-amd64.tar.gz", "cbcad4a6482107c7c7926df1608106c189417163428200ce357695cc7e01d091"),
        "windows_amd64": ("go1.23.5.windows-amd64.zip", "96d74945d7daeeb98a7978d0cf099321d7eb821b45f5c510373d545162d39c20"),
    },
    version = "1.23.5",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_bmatcuk_doublestar",
    "com_github_stretchr_testify",
    "com_github_termie_go_shutil",
    "org_golang_x_sys",
)

#################################################################
# msbuild and dotnet
#################################################################
dotnet_sdk = use_extension("@rules_msbuild//dotnet:extensions.bzl", "dotnet")
dotnet_sdk.toolchain(
    name = "dotnet_sdk",
    nuget_repo = "@nuget//:tfm_mapping",
    shas = {
        "windows_amd64": "d885cae5d0ebded98f4f05fb4637acac1e263cc525ccdb7a21cf9e58a879d2ec",
    },
    version = "10.0.103",
)
use_repo(dotnet_sdk, "dotnet_sdk")

register_toolchains("@dotnet_sdk//:all")

nuget = use_extension("@rules_msbuild//dotnet:extensions.bzl", "nuget")
nuget.fetch(
    name = "nuget",
    dotnet_sdk_root = "@dotnet_sdk//:ROOT",
    packages = {
        "CommandLineParser/2.8.0": ["net10.0"],
        "RulesMSBuild.Runfiles/": ["net10.0"],
        "FluentAssertions/5.10.3": [
            "net10.0",
        ],
        "Grpc.AspNetCore/2.40.0": ["net10.0"],
        "Grpc.Net.Client/2.40.0": ["net10.0"],
        # "Microsoft.Build/18.0.13": ["net10.0"],
        "Microsoft.Build.Locator/1.10.2": ["net10.0"],
        "Microsoft.Build.Tasks.Core/18.0.13": ["net10.0"],
        "Microsoft.Build.Utilities.Core/18.0.13": ["net10.0"],
        "Microsoft.NET.StringTools/18.0.13": ["net10.0"],
        "Microsoft.NET.Test.Sdk/16.7.1": [
            "net10.0",
        ],
        "Moq/4.16.1": [
            "net10.0",
        ],
        "Newtonsoft.Json/13.0.1": ["net10.0"],
        "SamHowes.Microsoft.Build/18.0.13": ["net10.0"],
        "SharpZipLib/1.3.3": ["net10.0"],
        "System.Security.Principal/4.3.0": ["net10.0"],
        "coverlet.collector/1.3.0": ["net10.0"],
        "xunit.assert/2.4.1": ["net10.0"],
        "xunit.console/2.4.1": ["net10.0"],
        "xunit.core/2.4.1": ["net10.0"],
        "xunit.extensibility.core/2.4.1": ["net10.0"],
        "xunit.runner.visualstudio/2.4.3": [
            "net10.0",
        ],
        "xunit/2.4.1": [
            "net10.0",
        ],        
    },
    target_frameworks = [
        "net10.0",
    ],
    use_host = True,
)
use_repo(nuget, "nuget")

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
bazel_binaries.download(version = "7.6.1")
bazel_binaries.download(version = "8.4.1")
bazel_binaries.download(version = "last_green")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_.bazelversion", "build_bazel_bazel_7_6_1", "build_bazel_bazel_8_4_1", "build_bazel_bazel_last_green")
