module(
    name = "e2e_hello",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_msbuild", version = "0.0.0")
local_path_override(
    module_name = "rules_msbuild",
    path = "../..",
)

bazel_dep(name = "rules_dotnet_runtime", version = "0.0.0")

RULES_DOTNET_RUNTIME_TAG = "895f52f8ca91dc9c273598afa358e73c8945ce90"

RULES_DOTNET_RUNTIME_INTEGRITY = "sha256-Mv7dbHwvikn6cdB5u8KJwW2PsqPIrqmNakpFlilgyfc="

archive_override(
    module_name = "rules_dotnet_runtime",
    integrity = RULES_DOTNET_RUNTIME_INTEGRITY,
    strip_prefix = "rules_dotnet_runtime-" + RULES_DOTNET_RUNTIME_TAG,
    urls = ["https://github.com/pratham2002m/rules_dotnet_runtime/archive/" + RULES_DOTNET_RUNTIME_TAG + ".zip"],
)


dotnet_sdk = use_extension("@rules_msbuild//dotnet:extensions.bzl", "dotnet")
dotnet_sdk.toolchain(
    name = "dotnet_sdk",
    nuget_repo = "@nuget//:tfm_mapping",
    shas = {
        "windows_amd64": "7be3174702eed0e9fb7d8bf12e47f3557e25daaa4a6454719b5797b270078836",
    },
    version = "10.0.103",
)
use_repo(dotnet_sdk, "dotnet_sdk")

register_toolchains("@dotnet_sdk//:all")

nuget = use_extension("@rules_msbuild//dotnet:extensions.bzl", "nuget")
nuget.fetch(
    name = "nuget",
    packages = {
        "CommandLineParser/2.8.0": ["net10.0"],
        "RulesMSBuild.Runfiles/": ["net10.0"],
        "FluentAssertions/5.10.3": [
            "net10.0",
        ],
        "Grpc.AspNetCore/2.40.0": ["net10.0"],
        "Grpc.Net.Client/2.40.0": ["net10.0"],
        "Microsoft.Build.Tasks.Core/18.0.13": ["net10.0"],
        "Microsoft.Build.Utilities.Core/18.0.13": ["net10.0"],
        "Microsoft.NET.StringTools/18.0.13": ["net10.0"],
        "Microsoft.NET.Test.Sdk/16.7.1": [
            "net10.0",
        ],
        "Moq/4.16.1": [
            "net10.0",
        ],
        "Newtonsoft.Json/13.0.1": ["net10.0"],
        # "Microsoft.Build/18.0.13": ["net10.0"],
        "SharpZipLib/1.3.3": ["net10.0"],
        "System.Security.Principal/4.3.0": ["net10.0"],
        "coverlet.collector/1.3.0": ["net10.0"],
        "xunit.assert/2.4.1": ["net10.0"],
        "xunit.console/2.4.1": ["net10.0"],
        "xunit.core/2.4.1": ["net10.0"],
        "xunit.extensibility.core/2.4.1": ["net10.0"],
        "xunit.runner.visualstudio/2.4.3": [
            "net10.0",
        ],
        "xunit/2.4.1": [
            "net10.0",
        ],
    },
    target_frameworks = [
        "net10.0",
    ],
    use_host = True,
    dotnet_sdk_root = "@dotnet_sdk//:ROOT",
)
use_repo(nuget, "nuget")
